customised sign up page

--- a/index1.html
+++ b/index1.html
@@ -41,7 +41,12 @@
             <div class="field">
               <input type="text" placeholder="First Name" required>
             </div>
-
+            <div class="field">
+              <input type="text" placeholder="Last Name" required>
+            </div>
+            <div class="field">
+              <input type="text" placeholder="Enrollment No." required>
+            </div>
             <div class="field">
               <input type="text" placeholder="Email Address" required>
             </div>
