--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="content">
-            <div class="title">ALL EVENTS AT ONE PLATFORM</div>
+            <div class="title">ALL EVENTS AT second PLATFORM</div>
             <div class="subtitle">EVENTS, ACTIVITIES & EXPERIENCES</div>
             <div class="register-box">
                 <input type="text" placeholder="Register your Event here...">
