--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="navitems">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">SERVICES</a></li>
-                <li class="hidden"><a href="#">UPCOMING EVENTS</a></li>
+                <li class><a href="#">UPCOMING EVENTS</a></li>
                 <li class="hidden"><a href="#">WINNERS</a></li>
                 <li><a href="#">OUR SUPPORT</a></li>
                 <li><a href="#">CONTACT</a></li>
