--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <h4>EVENT<span>NEXUS</span></h4>
             <ul class="navitems">
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">SERVICES</a></li>
-                <li class><a href="#">UPCOMING EVENTS</a></li>
+                <li><a href="#">EVENTS</a></li>
+                <li><a href="#">AWARDS</a></li>
                 <li class="hidden"><a href="#">WINNERS</a></li>
-                <li><a href="#">OUR SUPPORT</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li class="hidden"><a href="#">OUR SUPPORT</a></li>
+                <li><button class="contact-btn"></button><a href="index2.html">CONTACT</a></li>
             </ul>
             <button class="signup-btn"><a href="index1.html">Sign Up</a></button>
         </div>
