--- a/index2.html
+++ b/index2.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +13,7 @@
 <body>
   <div class="formBox">
       <h2>Contact Us</h2>
-      <p>You will hear from us at the earliest!</p>
+      <p>Have a question? We’re here to help!<br> Please fill out the form below or use any of the contact methods to reach us.</p>
       <form action="#">
           <div class="nameInp">
               <i class="fa fa-user icon"></i>
@@ -36,5 +38,6 @@
       </form>
       <p class="extra">You can also contact us at 000-0000-000</p>
   </div>
-  
+  <script  src="./script1.js"></script>
 </body>
+</html>
