Contact page updation

--- a/index2.html
+++ b/index2.html
@@ -30,13 +30,13 @@
           </div>
           <div class="queryInp">
               <textarea name="query" id="query" cols="30" rows="5"
-                  placeholder="Any comment or your query" ></textarea>
+                  placeholder="Yes! you are free to write here..." ></textarea>
           </div>
           <div class="submitBtn">
-              <button id="btn" onclick="notif()">Send</button>
+              <button id="btn" onclick="notif()"><b>Send</button>
           </div>
       </form>
-      <p class="extra">You can also contact us at 000-0000-000</p>
+      <p class="extra">You can also contact us at <i><a href="">contact@nexusevents.com</a></i></p>
   </div>
   <script  src="./script1.js"></script>
 </body>
