place holder update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="title">ALL EVENTS AT ONE PLATFORM</div>
             <div class="subtitle">EVENTS, ACTIVITIES & EXPERIENCES</div>
             <div class="register-box">
-                <input type="text" placeholder="Register your Event here...">
+                <input type="text" placeholder="Searh Events Here...">
             </div>
         </div>
     </div>
