--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <ul class="navitems">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">EVENTS</a></li>
-                <li><a href="#">AWARDS</a></li>
+                <li><a href="awards.html">AWARDS</a></li>
                 <li class="hidden"><a href="#">WINNERS</a></li>
                 <li class="hidden"><a href="#">OUR SUPPORT</a></li>
-                <li><button class="contact-btn"></button><a href="index2.html">CONTACT</a></li>
+                <li><a href="index2.html">CONTACT</a></li>
             </ul>
             <button class="signup-btn"><a href="index1.html">Sign Up</a></button>
         </div>
