--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
 <body>
     <div class="container">
         <div class="header">
-            <h4>EVENT<span>NEXUS</span></h4>
+        <h4>EVENT<span>NEXUS</span></h4>
             <ul class="navitems">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">EVENTS</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="past_events.html">EVENTS</a></li>
                 <li><a href="awards.html">AWARDS</a></li>
-                <li class="hidden"><a href="#">WINNERS</a></li>
-                <li class="hidden"><a href="#">OUR SUPPORT</a></li>
                 <li><a href="index2.html">CONTACT</a></li>
             </ul>
-            <button class="signup-btn"><a href="index1.html">Sign Up</a></button>
+        <button class="signup-btn"><a href="index1.html">Sign Up</a></button>
         </div>
 
         <div class="content">
