--- a/event_registration.html
+++ b/event_registration.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="header">
-        <h4>EVENT<span> NEXUS</span></h4>
+        <h4>EVENT<span>NEXUS</span></h4>
         <ul class="navitems">
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">AWARDS</a></li>
-            <li><a href="#">UPCOMING EVENTS</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="past_events.html">EVENTS</a></li>
+            <li><a href="awards.html">AWARDS</a></li>
+            <li><a href="index2.html">CONTACT</a></li>
         </ul>
         <img src="#" class="profile-img" alt="profile-img">
     </div>
