--- a/past_events.html
+++ b/past_events.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Past Events</title>
+    <title>Events</title>
     <link rel="stylesheet" href="style4.css">
 </head>
 <body>
-    <h1>Our Past Events</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="past_events.html">EVENTS</a></li>
+            <li><a href="awards.html">AWARDS</a></li>
+            <li><a href="index2.html">CONTACT</a></li>
+        </ul>
+    </nav>
+
+    <h1>Events</h1>
     <div class="event-card">
         <h2 class="event-title">Coding Workshop</h2>
         <p class="event-date">Date: 10th September 2024</p>
