--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <li><a href="index.html">HOME</a></li>
-            <li><a href="past_events.html">EVENTS</a></li>
+            <li><a href="events.html">EVENTS</a></li>
             <li><a href="awards.html">AWARDS</a></li>
             <li><a href="index2.html">CONTACT</a></li>
         </ul>
