--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h4>EVENT<span>NEXUS</span></h4>
             <ul class="navitems">
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="past_events.html">EVENTS</a></li>
+                <li><a href="events.html">EVENTS</a></li>
                 <li><a href="awards.html">AWARDS</a></li>
                 <li><a href="index2.html">CONTACT</a></li>
             </ul>
