--- a/events.html
+++ b/events.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="style4.css">
 </head>
 <body>
-    <nav>
-        <ul>
+    <div class="header">
+        <h4>EVENT<span> NEXUS</span></h4>
+        <ul class="navitems">
             <li><a href="index.html">HOME</a></li>
-            <li><a href="events.html">EVENTS</a></li>
+            <li><a href="past_events.html">EVENTS</a></li>
             <li><a href="awards.html">AWARDS</a></li>
             <li><a href="index2.html">CONTACT</a></li>
         </ul>
-    </nav>
+        <button class="btn" onclick="location.href='event_reg.html'">Register Your Event</button>
+    </div>
 
     <h1>Events</h1>
     <div class="event-card">
