--- a/awards.html
+++ b/awards.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Past Achievements & Awards 2023</h1>
+        <h1>Achievements & Awards 2023</h1>
     </header>
 
     <section class="awards">
@@ -32,7 +32,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your EventNexus. All Rights Reserved.</p>
+        <p>&copy; 2024 EventNexus. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
