--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="title">ALL EVENTS AT ONE PLATFORM</div>
             <div class="subtitle">EVENTS, ACTIVITIES & EXPERIENCES</div>
             <div class="register-box">
-                <input type="text" placeholder="Searh Events Here...">
+                <input type="text" placeholder="Search Events Here...">
             </div>
         </div>
     </div>
