--- a/event_reg.html
+++ b/event_reg.html
@@ -29,7 +29,7 @@
             <input type="number" class="input-field" name="Event-Fees" id="Event-Fees" placeholder="Participation Fees (in INR)">
             <input type="number" class="input-field" name="Max-Attendees" id="Max-Attendees" placeholder="Maximum No. of Attendees Required">
             <input type="text" class="input-field" name="Event-Guests" id="Event-Guests" placeholder="Name of the Event Guests">
-            <input type="text" class="input-field" name="Event-Prizes" id="Event-Prizes" placeholder="What sre the Prizes">
+            <input type="text" class="input-field" name="Event-Prizes" id="Event-Prizes" placeholder="What are the Prizes">
             <input type="text" class="input-field" name="Event-Coordinator" id="Event-Coordinator" placeholder="Name of the Event Coordinator">
             <input type="text" class="input-field" name="Participation-Type" id="Participation-Type" placeholder="Solo Event or Team Event">
 
