--- a/index1.html
+++ b/index1.html
@@ -21,7 +21,7 @@
           <div class="slider-tab"></div>
         </div>
         <div class="form-inner">
-          <form action="#" class="login">
+          <form action="index_profile.html" class="login">
             <pre>
             </pre>
             <div class="field">
@@ -37,7 +37,7 @@
             </div>
             <div class="signup-link">Create an account <a href="">Signup now</a></div>
           </form>
-          <form action="#" class="signup">
+          <form action="index1.html" class="signup">
             <div class="field">
               <input type="text" placeholder="First Name" required>
             </div>
