--- a/index_profile.html
+++ b/index_profile.html
@@ -8,21 +8,21 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style5.css">
 </head>
 
 <body>
     <div class="container">
-        <div class="header">
-        <h4>EVENT<span>NEXUS</span></h4>
-            <ul class="navitems">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="index1.html">EVENTS</a></li>
-                <li><a href="awards.html">AWARDS</a></li>
-                <li><a href="index1.html">CONTACT</a></li>
-            </ul>
-        <button class="signup-btn"><a href="index1.html">Sign Up</a></button>
-        </div>
+      <div class="header">
+        <h4>EVENT<span> NEXUS</span></h4>
+        <ul class="navitems">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="events.html">EVENTS</a></li>
+            <li><a href="awards.html">AWARDS</a></li>
+            <li><a href="index2.html">CONTACT</a></li>
+        </ul>
+        <img src="profile-img.png" class="profile-img" alt="profile-img">
+    </div>
 
         <div class="content">
             <div class="title">ALL EVENTS AT ONE PLATFORM</div>
