--- a/event_reg.html
+++ b/event_reg.html
@@ -11,7 +11,7 @@
         <h4>EVENT<span> NEXUS</span></h4>
         <ul class="navitems">
             <li><a href="index.html">HOME</a></li>
-            <li><a href="past_events.html">EVENTS</a></li>
+            <li><a href="events.html">EVENTS</a></li>
             <li><a href="awards.html">AWARDS</a></li>
             <li><a href="index2.html">CONTACT</a></li>
         </ul>
@@ -20,7 +20,10 @@
 
     <div class="form-container">
         <form action="" method="post" name="event-reg-form">
-
+            <div class="wrapper">
+                <div class="title-text">
+                  <div class="title login">Register Your Event</div>
+                </div>
             <input type="text" class="input-field" name="Event-Name" id="Event-Name" placeholder="Event Name">
             <input type="text" class="input-field" name="Event-Desc" id="Event-Desc" placeholder="Event Description">
             <input type="text" class="input-field" name="Event-Venue" id="Event-Venue" placeholder="Event Venue">
