--- a/event_reg.html
+++ b/event_reg.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="logo" href="LOGO.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Registration</title>
     <link rel="stylesheet" href="event_reg.css">
