--- a/index1.html
+++ b/index1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" type="logo" href="LOGO.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>login/signup</title>
   <link rel="stylesheet" href="./style1.css">
