--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <div id="preloader"></div>
     <div class="container">
         <div class="header">
         <h4>EVENT<span>NEXUS</span></h4>
@@ -33,6 +34,11 @@
             </div>
         </div>
     </div>
-
+<script>
+    var loader =  document.getElementById("preloader");
+    window.addEventListener("load", function(){
+        loader.style.display = "none";
+        });
+</script>
 </body>
 </html>
