Award nav update

--- a/awards.html
+++ b/awards.html
@@ -6,41 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awards</title>
     <link rel="stylesheet" href="style3.css">
-    <style>
-        /* Add some basic styles for the navigation bar */
-        nav {
-            background-color: #333;
-            padding: 10px 0;
-        }
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            text-align: center;
-        }
-        nav ul li {
-            display: inline;
-            margin: 0 10px;
-        }
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-        }
-    </style>
+
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index_profile.html">Home</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="awards.html">Awards</a></li>
-            <li><a href="contact.html">Contact</a></li>
+    <div class="header">
+        <h4>EVENT<span> NEXUS</span></h4>
+        <ul class="navitems">
+            <li><a href="index_profile.html">HOME</a></li>
+            <li><a href="events.html">EVENTS</a></li>
+            <li><a href="awards.html">AWARDS</a></li>
+            <li><a href="index2.html">CONTACT</a></li>
         </ul>
-    </nav>
+        <img src="profile-img.png" class="profile-img" alt="profile-img">
+    </div>
 
-    <header>
-        <h1>Achievements & Awards 2023</h1>
-    </header>
+        <center><h1>Achievements & Awards 2023</center></h1>
 
     <section class="awards">
         <div class="award-card">
