--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="navitems">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="index1.html">EVENTS</a></li>
-                <li><a href="awards.html">AWARDS</a></li>
+                <li><a href="index1.html">AWARDS</a></li>
                 <li><a href="index1.html">CONTACT</a></li>
             </ul>
         <button class="signup-btn"><a href="index1.html">Sign Up</a></button>
