--- a/events.html
+++ b/events.html
@@ -11,12 +11,13 @@
     <div class="header">
         <h4>EVENT<span> NEXUS</span></h4>
         <ul class="navitems">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="past_events.html">EVENTS</a></li>
+            <li><a href="index_profile.html">HOME</a></li>
+            <li><a href="events.html">EVENTS</a></li>
             <li><a href="awards.html">AWARDS</a></li>
             <li><a href="index2.html">CONTACT</a></li>
         </ul>
         <button class="btn" onclick="location.href='event_reg.html'">Register Your Event</button>
+        <img src="profile-img.png" class="profile-img" alt="profile-img">
     </div>
 
     <h1>Events</h1>
