--- a/events.html
+++ b/events.html
@@ -21,7 +21,7 @@
     </div>
 
     <h1>Events</h1>
-    <div class="event-card">
+    <div class="event-card" button onclick="location.href= 'event_card1.html'">
         <h2 class="event-title">Coding Workshop</h2>
         <p class="event-date">Date: 10th September 2024</p>
         <p class="event-description">
@@ -29,7 +29,7 @@
         </p>
     </div>
 
-    <div class="event-card">
+    <div class="event-card" button onclick="location.href='event_card2.html'">
         <h2 class="event-title">Cultural Fest</h2>
         <p class="event-date">Date: 25th August 2024</p>
         <p class="event-description">
@@ -37,7 +37,7 @@
         </p>
     </div>
 
-    <div class="event-card">
+    <div class="event-card" button onclick="location.href='event_card3.html'">
         <h2 class="event-title">Tree Plantation Drive</h2>
         <p class="event-date">Date: 5th June 2024</p>
         <p class="event-description">
