The chaalbaaz idea

--- a/reg_page2.html
+++ b/reg_page2.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cultural Fest Registration</title>
-    <link rel="stylesheet" href="reg_page2.css"
+    <link rel="stylesheet" href="reg_page2.css">
 </head>
 <body>
 
 <div class="registration-container">
     <h1>Cultural Fest</h1>
-    <form action="#" method="post">
+    <form action="https://script.google.com/macros/s/AKfycbzebg0n-QoVWRk_fY2M6q_lflG2nWCqAZSXa5II8GVH8Oe6MjahyRIUIX3vhh88Pr6U/exec" method="post" name="cultural-fest">
         <div class="form-group">
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
@@ -44,6 +44,6 @@
         <input type="submit" value="Register">
     </form>
 </div>
-
+<script src="GoogleSheets3.js"></script>
 </body>
 </html>
