--- a/event_reg.html
+++ b/event_reg.html
@@ -12,7 +12,7 @@
         <h4>EVENT<span> NEXUS</span></h4>
         <ul class="navitems">
             <li><a href="index.html">HOME</a></li>
-            <li><a href="events.html">EVENTS</a></li>
+            <li><a href="events2.html">EVENTS</a></li>
             <li><a href="awards.html">AWARDS</a></li>
             <li><a href="index2.html">CONTACT</a></li>
         </ul>
