--- a/index_profile.html
+++ b/index_profile.html
@@ -18,7 +18,7 @@
         <h4>EVENT<span> NEXUS</span></h4>
         <ul class="navitems">
             <li><a href="index_profile.html">HOME</a></li>
-            <li><a href="events.html">EVENTS</a></li>
+            <li><a href="events1.html">EVENTS</a></li>
             <li><a href="awards.html">AWARDS</a></li>
             <li><a href="index2.html">CONTACT</a></li>
         </ul>
