--- a/reg_page1.html
+++ b/reg_page1.html
@@ -10,7 +10,7 @@
 
 <div class="registration-container">
     <h1>Coding Workshop</h1>
-    <form action="#" method="post">
+    <form action="https://script.google.com/macros/s/AKfycbxtQkVmK53QX7jbD4oDdGc1lmK8XwGZkL7XOsPXLGj3jSvxkOZK7Nx7MoHqUqnJlnlg/exec" method="post" name="coding-workshop">
         <div class="form-group">
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
@@ -44,6 +44,6 @@
         <input type="submit" value="Register">
     </form>
 </div>
-
+<script src="GoogleSheets2.js"></script>
 </body>
 </html>
