--- a/reg_page3.html
+++ b/reg_page3.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tree Plantation Drive Registration</title>
-    <link rel="stylesheet" href="reg_page3.css"
+    <link rel="stylesheet" href="reg_page3.css">
 </head>
 <body>
 
 <div class="registration-container">
     <h1>Tree Plantation Drive</h1>
-    <form action="#" method="post">
+    <form action="https://script.google.com/macros/s/AKfycbzHXwBRxXzesf6GOxb8WGrQpjbniVLVUqqDvcnmp5cQv0tHPE92SBBihEatnDKPKW-H4g/exec" method="post" name="tree-plantation-drive">
         <div class="form-group">
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
@@ -43,6 +43,6 @@
         <input type="submit" value="Register">
     </form>
 </div>
-
+<script src="GoogleSheets4.js"></script>
 </body>
 </html>
