--- a/event_card1.html
+++ b/event_card1.html
@@ -10,8 +10,8 @@
 
 <div class="event-container">
     <h1><center>Coding Workshop</h1></center>
-    <div class="date"><strong>Date:</strong> 10th September 2024</div>
-    <div class="time"><strong>Time:</strong> 10:00 AM - 4:00 PM</div>
+    <div class="date"><strong>Date:</strong> 10th December 2024</div>
+    <div class="time"><strong>Time:</strong> 10:00 AM </div>
     <div class="venue"><strong>Venue:</strong> Room 101, ABC Building</div>
     
     <div class="description">
