--- a/event_reg.html
+++ b/event_reg.html
@@ -27,6 +27,7 @@
                 </div>
             <input type="text" class="input-field" name="Event-Name" id="Event-Name" placeholder="Event Name">
             <input type="text" class="input-field" name="Event-Desc" id="Event-Desc" placeholder="Event Description">
+            <input type="text" class="input-field" name="Event-Topics" id="Event-Topics" placeholder="Event Topics">
             <input type="text" class="input-field" name="Event-Venue" id="Event-Venue" placeholder="Event Venue">
             <input type="date" class="input-field" name="Event-Date" id="Event-Date" placeholder="Event Date">
             <input type="time" class="input-field" name="Event-Time" id="Event-Time" placeholder="Event Time">
