--- a/reg_page1.html
+++ b/reg_page1.html
@@ -10,7 +10,7 @@
 
 <div class="registration-container">
     <h1>Coding Workshop</h1>
-    <form action="https://script.google.com/macros/s/AKfycbxdicK_PivSP4gJj177sydPwD-qRsU4o-vZ5vKeFZQTPPqYHie5MGVDE3Y7KaZNx0hL/exec" method="post" name="coding-workshop">
+    <form method="post" action="https://script.google.com/macros/s/AKfycbyGZauZ8I2-IAYdYlm-tbK32uAzAVa6AilX46c7A99lTWPSbAGb2FFt7Zp1d7ZTV4t0kQ/exec" name="coding-workshop-reg">
         <div class="form-group">
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
